--- a/src/dataexplorer/dataexplorer-application/src/components/PatientInfo/MyPatients.style.scss
+++ b/src/dataexplorer/dataexplorer-application/src/components/PatientInfo/MyPatients.style.scss
@@ -5,3 +5,7 @@
         width: 100%;
     }
 }
+
+p {
+    margin-bottom: 7;
+}
